2025-09-19  Marc Glisse <marc.glisse@inria.fr>

	* acinclude.m4 (alloca array): Remove broken test.

2025-03-15  Khem Raj <raj.khem@gmail.com>

	* acinclude.m4: Add parameter names to function prototype.

2025-02-01  Marc Glisse <marc.glisse@inria.fr>

	* longlong.h (loongarch64 umul_ppmm): __int128__ -> __int128.

2025-01-31  Marc Glisse <marc.glisse@inria.fr>

	* demos/calc/calc.y (yylex, yyerror): Declare.
	* printf/repl-vsnprintf.c (__gmp_replacement_vsnprintf): Handle %a.

2025-01-29  Albin Ahlbäck <albin.ahlback@gmail.com>
	    Marc Glisse <marc.glisse@inria.fr>

	* config.guess: Accept pro/max variants of Apple chips.

2025-01-29  Rudi Heitbaum <rudi@heitbaum.com>
	    Marc Glisse <marc.glisse@inria.fr>

	* acinclude.m4: Complete function prototype.

2024-05-15 Sven Anderson <sven@anderson.de>

	* mpn/x86_64/fat/fat.c: Fix bug in BMI2 detection.

2024-03-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/millerrabin.c: Swap function order to avoid a (wrong) prototype,
	typo spoted by Case Van Horsen. Update also tested values.
	* mpn/generic/sec_div.c: Declare qh only when needed.

	* printf/doprntf.c: Trust return value of sprintf, and use it.
	* printf/repl-vsnprintf.c: Likewise, with vsprintf.
	* printf/sprintffuns.c: Likewise. Bugs spotted by Vincent Lefevre.
	* tests/misc/t-printf.c: Test those changes.

2024-02-18  Niels Möller  <nisse@lysator.liu.se>

	* tests/mpz/t-gcd.c (gcdext_valid_p): Stricter check that cofactors
	match the documented behavior. Adapted from the corresponding
	mini-gmp test.

2023-12-27  Niels Möller  <nisse@lysator.liu.se>

	* tune/tuneup.c (tune_mul): Updated to measure all
	MUL_TOOM*_TO_TOOM*_THRESHOLD using size_ratio.

	* tune/speed.h: Update declarations.
	(SPEED_ROUTINE_MPN_MUL_TSPACE): Add support for size_ratio. New
	arguments default_bn and valid.
	(SPEED_ROUTINE_MPN_TOOM22_MUL, SPEED_ROUTINE_MPN_TOOM33_MUL)
	(SPEED_ROUTINE_MPN_TOOM44_MUL, SPEED_ROUTINE_MPN_TOOM6H_MUL)